# mp_reader

./: README.md  main.py  pyproject.toml  stats_reader.py
mp_reader/: __main__.py  analyzer.py  cli_tools.py  color.py  loader.py  malloc_stats.py  tree.py
src/mp_reader/: __main__.py
test_files/: simple_alloc.json  simple_nested_objects.json  single_alloc.json  string.json
test_files/linux/: objects_in_array.json  objects_in_lambda.json  objects_in_svector.json  objects_in_svector_martinus.json  objects_in_union.json  objects_in_variant.json  objects_in_vector.json  simple_alloc.json  simple_nested_objects.json  single_alloc.json  string.json  tuplet_demo.json
test_files/macos/: objects.json  objects_beman_inplace.json  objects_in_array.json  objects_in_lambda.json  objects_in_svector.json  objects_in_svector_martinus.json  objects_in_union.json  objects_in_variant.json  objects_in_vector.json  simple_alloc.json  simple_nested_objects.json  single_alloc.json  string.json  tuplet_demo.json
tests/: test_tree.py
