[project]
name = "stats-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cattrs>=25.1.1",
    "typer>=0.16.1",
]


[project.scripts]
print-objects = "mp_reader.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
]
